# bazel-example

./: .bazelrc  .clang-format  .gitignore  MODULE.bazel  WORKSPACE
.clwb/: .bazelproject
projects/example/: BUILD.bazel
projects/example/private/: example.cpp
projects/example/proto/: Example.proto
projects/example/public/: example.h
projects/example/tests/: main.cpp  test_one.cpp
projects/howdy/: BUILD.bazel  main.cpp
projects/howdy/tests/: another_suite.cpp  main.cpp
tools/: BUILD  BUILD.bazel
tools/xcode/: BUILD.bazel
utils/: BUILD
