module(name = "bazel_example", version = "1.0")

bazel_dep(name = "bazel_skylib", version = "1.4.1")

bazel_dep(name = "rules_xcodeproj", version = "1.3.3")
bazel_dep(name = "rules_apple", version = "2.2.0")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "rules_cc", version = "0.0.6")
bazel_dep(name = "rules_python", version = "0.20.0")

bazel_dep(name = "protobuf", version = "21.7")
bazel_dep(name = "fmt", version = "9.1.0")
bazel_dep(name = "abseil-cpp", version = "20230125.1")
bazel_dep(name = "googletest", version = "1.12.1")
