package(default_visibility=["//visibility:public"])

load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "example_proto",
    srcs = ["proto/Example.proto"],
)

cc_proto_library(
    name = "example_data",
    deps = [":example_proto"],
)

cc_library(
    name="example",
    hdrs = [
        "public/example.h",
    ],
    srcs = [
        "private/example.cpp",
    ],
    deps = [
        ":example_data"
    ],
    includes = ["public", "proto"],
)

cc_test(
    name = "tests",
    srcs = glob(["tests/*"]),
    deps = [":example", "@googletest//:gtest"],
)
